--- a/subjects/RTSP/Live555/Dockerfile-snapfuzz
+++ b/subjects/RTSP/Live555/Dockerfile-snapfuzz
@@ -5,6 +5,7 @@ ARG MAKE_OPT
 
 USER root
 RUN apt-get install -y \
+	htop psmisc\
 	cmake libsqlite3-dev libelf-dev
 
 USER ubuntu
@@ -29,3 +30,11 @@ RUN cd $WORKDIR/live555 && \
     AFL_USE_ASAN=1 make clean all
 RUN cd $WORKDIR/live555-cov && \
     make CFLAGS="-fprofile-arcs -ftest-coverage" CPPFLAGS="-fprofile-arcs -ftest-coverage" CXXFLAGS="-fprofile-arcs -ftest-coverage" LDFLAGS="-fprofile-arcs -ftest-coverage" clean all
+
+
+
+COPY --chown=ubuntu:ubuntu kill-server.sh ${WORKDIR}/kill-server
+COPY --chown=ubuntu:ubuntu in-rtsp ${WORKDIR}/in-rtsp
+COPY --chown=ubuntu:ubuntu rtsp.dict ${WORKDIR}/rtsp.dict
+COPY --chown=ubuntu:ubuntu cov_script.sh ${WORKDIR}/cov_script
+COPY --chown=ubuntu:ubuntu run.sh ${WORKDIR}/run
