--- a/subjects/RTSP/Live555/Dockerfile
+++ b/subjects/RTSP/Live555/Dockerfile
@@ -1,5 +1,4 @@
-# Ugh https://bugs.launchpad.net/ubuntu/+source/glibc/+bug/1918035 comment 16
-FROM ubuntu:18.04 
+FROM ubuntu:20.04
 
 # Install common dependencies
 ENV DEBIAN_FRONTEND=noninteractive
@@ -22,7 +21,8 @@ RUN apt-get -y update && \
     gdb \
     netcat \
     strace \
-    wget
+    wget \
+    cmake libsqlite3-dev libelf-dev
 
 # Add a new user ubuntu, pass: ubuntu
 RUN groupadd ubuntu && \
@@ -97,8 +97,8 @@ RUN cd ${WORKDIR}/live555-cov/testProgs && \
 # While working on Snapfuzz, quicker to place in Dockerfile-snapfuzz,
 # So I can cange without rebuilding
 
-# COPY --chown=ubuntu:ubuntu kill-server.sh ${WORKDIR}/kill-server
-# COPY --chown=ubuntu:ubuntu in-rtsp ${WORKDIR}/in-rtsp
-# COPY --chown=ubuntu:ubuntu rtsp.dict ${WORKDIR}/rtsp.dict
-# COPY --chown=ubuntu:ubuntu cov_script.sh ${WORKDIR}/cov_script
-# COPY --chown=ubuntu:ubuntu run.sh ${WORKDIR}/run
+COPY --chown=ubuntu:ubuntu kill-server.sh ${WORKDIR}/kill-server
+COPY --chown=ubuntu:ubuntu in-rtsp ${WORKDIR}/in-rtsp
+COPY --chown=ubuntu:ubuntu rtsp.dict ${WORKDIR}/rtsp.dict
+COPY --chown=ubuntu:ubuntu cov_script.sh ${WORKDIR}/cov_script
+COPY --chown=ubuntu:ubuntu run.sh ${WORKDIR}/run
