--- a/subjects/SMTP/Exim/Dockerfile-snapfuzz
+++ b/subjects/SMTP/Exim/Dockerfile-snapfuzz
@@ -20,6 +20,5 @@ RUN cd ${WORKDIR} && \
     make clean && \
     AFL_USE_ASAN=1 make CC=afl-clang-fast clean all install $MAKE_OPT
 
-RUN cd  $WORKDIR/"exim" && \
+RUN cd $WORKDIR/exim && \
     cp $SNAPFUZZ/snapfuzz/build/sabre .
-USER ubuntu
