Try forked-daap (doesn't work)

--- a/subjects/DAAP/forked-daapd/Dockerfile
+++ b/subjects/DAAP/forked-daapd/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get -y update && \
     gdb \
     netcat \
     strace \
+    cmake libsqlite3-dev libelf-dev \
     wget
 
 # Add a new user ubuntu, pass: ubuntu
