--- a/subjects/DTLS/TinyDTLS/Dockerfile-snapfuzz
+++ b/subjects/DTLS/TinyDTLS/Dockerfile-snapfuzz
@@ -14,7 +14,7 @@ RUN rm $AFL_PATH/as
 
 RUN cd $WORKDIR/tinydtls/tests && \
     make clean && \
-    C=afl-clang-fast make clean && \
+    CC=afl-clang-fast make clean && \
     AFL_USE_ASAN=1 CC=afl-clang-fast make ../libtinydtls.a $MAKE_OPT && \
     AFL_USE_ASAN=1 CC=afl-clang-fast make $MAKE_OPT
 
